ingress/carsharing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carshring-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /reservations/**, /env/**, /reserve/**, /cancel/**, /resreturn/**, /reserve**, /cancel**, /return**
        pathType: Prefix
        backend:
          service:
            name: reservation
            port:
              number: 80
      - path: /payments/**, /pay/**
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 80
      - path: /rentals/**,  /rentaled/**, /retrieved/**, /rental_action**, /retrieve_action**
        pathType: Prefix
        backend:
          service:
            name: rental
            port:
              number: 80
      - path: /customers/**, /myPages/**, /mypage**
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 80
